--- a/lazy-clare/src/app/app.component.html
+++ b/lazy-clare/src/app/app.component.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html class="bg-darkGrey">
+<div class="bg-darkGrey">
   <div class="pt-2">
     <header-container></header-container>
     <nav-bar></nav-bar>
     <main-container></main-container>
   </div>
-</html>
+</div>
